use Integer.valueOf() instead new Integer()